# realtime-ml-system

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/synthetic/: generate_feature_data.py
docs/: architecture.md  benchmark-results.md  feature-schema.md  latency-sla.md  model-card.md  runbook.md
docs/assets/model_eval/: feature_importance.csv  precision_recall_curve.csv  roc_curve.csv  summary.md
infra/docker/: docker-compose.yml
infra/docker/flink/: Dockerfile
infra/docker/prometheus/: alerts.yml  prometheus.yml
infra/docker/ray/: Dockerfile
infra/k8s/helm/fraud-detection/: Chart.yaml  values.yaml
infra/terraform/: main.tf  variables.tf
scripts/: benchmark_matrix.sh  eval_quick.py  perf_breakdown.py  produce_transactions.py  rollback.py  smoke_test.sh
services/feature-store/: pyproject.toml
services/feature-store/src/feature_store/repo/: feature_store.yaml  features.py
services/load-testing/: pyproject.toml
services/load-testing/src/load_testing/: latency_report.py  locustfile.py  transaction_gen.py
services/monitoring/: pyproject.toml
services/monitoring/src/monitoring/: drift_detector.py  retraining_trigger.py
services/serving/: pyproject.toml
services/serving/src/serving/: app.py  responses.py  schemas.py
services/serving/src/serving/deployments/: fraud_scorer.py  router.py
services/serving/src/serving/middleware/: latency_tracker.py
services/serving/src/serving/models/: onnx_runner.py  version_manager.py
services/serving/tests/: test_fraud_scorer.py  test_schemas.py
services/streaming/: pyproject.toml
services/streaming/src/streaming/: checkpointing.py  job.py
services/streaming/src/streaming/operators/: enrichment.py  velocity.py
services/streaming/src/streaming/schemas/: transaction.py
services/training/: pyproject.toml
services/training/src/training/: data_generator.py  onnx_exporter.py  pipeline.py  xgboost_trainer.py
services/training/src/training/online_learning/: bandit.py  sgd_updater.py
services/training/tests/: test_data_generator.py
