[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feature-store"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "feast[redis]==0.40.0",
    "pyiceberg[s3]==0.7.0",
    "pyarrow>=16.0,<18.0",
    "pandas>=2.2",
    "redis>=5.0",
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/feature_store"]
