[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "load-testing"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "locust==2.29.0",
    "numpy>=1.26,<2.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "prometheus-client>=0.20",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/load_testing"]
