[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monitoring"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "evidently==0.4.33",
    "prometheus-client>=0.20",
    "pandas>=2.2",
    "numpy>=1.26,<2.0",
    "pyiceberg[s3]==0.7.0",
    "pyarrow>=16.0,<18.0",
    "mlflow>=2.14,<3.0",
    "redis>=5.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "schedule>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/monitoring"]
