[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streaming"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "apache-flink==1.19.0",
    "confluent-kafka>=2.4,<3.0",
    "pydantic>=2.7",
    "redis>=5.0",
    "pyarrow>=16.0,<18.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/streaming"]
